<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="6dp"
        android:text="时间"/>

    <EditText
        android:id="@+id/history_modify_item_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:hint="@string/time_example"
        android:maxLines="1"
        android:layout_marginBottom="12dp"
        android:background="@drawable/edittext_rounded_style"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="6dp"
        android:text="类别"/>

    <EditText
        android:id="@+id/history_modify_item_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_type"
        android:maxLines="1"
        android:layout_marginBottom="12dp"
        android:background="@drawable/edittext_rounded_style"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="6dp"
        android:text="事件"/>

    <EditText
        android:id="@+id/history_modify_item_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_record_comment"
        android:maxLines="1"
        android:layout_marginBottom="12dp"
        android:background="@drawable/edittext_rounded_style"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:textSize="16sp"
        android:text="金额"/>

    <EditText
        android:id="@+id/history_modify_item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_record_price"
        android:maxLines="1"
        android:background="@drawable/edittext_rounded_style"/>

</LinearLayout>