<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp">

    <EditText
        android:id="@+id/record_comment"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.45"
        android:layout_height="wrap_content"
        android:hint="@string/description_record_comment"
        android:maxLines="1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:background="@drawable/edittext_rounded_style"/>
    <EditText
        android:id="@+id/record_price"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.17"
        android:layout_height="wrap_content"
        android:hint="@string/description_record_price"
        android:maxLines="1"
        android:textSize="12sp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/record_price_type"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/edittext_rounded_style"/>
    <TextView
        android:id="@+id/record_price_type"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.06"
        android:layout_marginEnd="6sp"
        android:layout_height="wrap_content"
        android:text="@string/title_money_yuan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/record_remove_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/record_remove_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/background_rounded_btn"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/title_record_remove"
        android:textColor="@color/colorRemoveRecordBtnText"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>