<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:gravity="center_vertical"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/record_manager_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_initial_text"
            android:textColor="#6A67CC"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/add_record_btn"
            android:layout_width="24dp"
            android:layout_height="30dp"
            android:contentDescription="@string/description_add_record"
            android:src="@drawable/ic_add_box_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/record_manage_ui_nothing_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_current_no_record"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_record_btn" />

        <!--include layout="@layout/layout_record_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_record_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/-->

        <LinearLayout
            android:id="@+id/record_manage_ui_record_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_record_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>





</LinearLayout>